--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 /Visual Studio Project/.vs/LonghornAirlines/v16/Server/sqlite3/storage.ide
 /Visual Studio Project/.vs/LonghornAirlines/v16/Server/sqlite3/storage.ide-shm
 /Visual Studio Project/.vs/LonghornAirlines/v16/Server/sqlite3/storage.ide-wal
+/Visual Studio Project/LonghornAirlines/bin
+/Visual Studio Project/LonghornAirlines/obj
