--- a/Visual Studio Project/LonghornAirlines/LonghornAirlines.csproj
+++ b/Visual Studio Project/LonghornAirlines/LonghornAirlines.csproj
@@ -14,7 +14,7 @@
   <ItemGroup>
     <Folder Include="Models\ViewModels\" />
     <Folder Include="DAL\" />
-    <Folder Include="wwwroot\lib\" />
+    <Folder Include="wwwroot\lib\NewFolder\" />
   </ItemGroup>
 
 </Project>
