--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 /Visual Studio Project/LonghornAirlines/bin/**
 /Visual Studio Project/LonghornAirlines/obj/**
 /Visual Studio Project/.vs/LonghornAirlines/config/applicationhost.config
+/Visual Studio Project/.vs/LonghornAirlines/DesignTimeBuild/.dtbcache
