--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 /Visual Studio Project/LonghornAirlines/obj/**
 /Visual Studio Project/.vs/LonghornAirlines/config/applicationhost.config
 /Visual Studio Project/.vs/LonghornAirlines/DesignTimeBuild/.dtbcache
+/Visual Studio Project/LonghornAirlines
